style: added game,app and art icon on skills section

--- a/assets/html/icons.html
+++ b/assets/html/icons.html
@@ -1,4 +1,64 @@
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display: none;">
+ 
+  <symbol id="app_icon" viewBox="0 0 512 512" xml:space="preserve" fill="currentColor">
+    <g id="SVGRepo_bgCarrier" stroke-width="0" />
+    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
+    <g id="SVGRepo_iconCarrier">
+      <circle style="fill:      #23FF50;" cx="256" cy="256" r="256" />
+      <path style="fill:#3cb75f;"
+        d="M174.732,406.909l104.62,104.019c122.921-11.117,220.756-109.113,231.624-232.107L335.875,103.722 L174.732,406.909z" />
+      <path style="fill:#2D2D2D;"
+        d="M186.971,412.444h138.056c9.006,0,16.305-7.301,16.305-16.305V115.862 c0-9.006-7.301-16.306-16.305-16.306H186.971c-9.006,0-16.306,7.301-16.306,16.306V396.14 C170.667,405.144,177.967,412.444,186.971,412.444z" />
+      <path style="fill:#020202;"
+        d="M325.027,99.556H256v312.889h69.027c9.006,0,16.305-7.301,16.305-16.305V115.86 C341.333,106.856,334.033,99.556,325.027,99.556z" />
+      <rect x="180.148" y="123.69" style="fill:#ffffff;" width="151.704" height="236.175" />
+      <rect x="256" y="123.69" style="fill:#deddda;" width="75.852" height="236.175" />
+      <g>
+        <path style="fill:#FF1D99;"
+          d="M222.958,274.675c-1.984,0-3.972-0.757-5.485-2.272L191.04,245.97c-3.031-3.029-3.031-7.94,0-10.969 l26.433-26.433c3.027-3.031,7.942-3.031,10.969,0c3.031,3.029,3.031,7.94,0,10.969l-20.945,20.947l20.945,20.947 c3.031,3.029,3.031,7.94,0,10.969C226.93,273.918,224.942,274.675,222.958,274.675z" />
+        <path style="fill:#FF1D99;"
+          d="M289.042,274.675c-1.984,0-3.972-0.757-5.485-2.272c-3.031-3.029-3.031-7.94,0-10.969l20.945-20.947 l-20.945-20.947c-3.031-3.029-3.031-7.94,0-10.969c3.027-3.031,7.942-3.031,10.969,0l26.433,26.433 c3.031,3.029,3.031,7.94,0,10.969l-26.433,26.433C293.014,273.918,291.026,274.675,289.042,274.675z" />
+        <path style="fill:#FF1D99;"
+          d="M242.776,274.677c-1.165,0-2.348-0.264-3.463-0.822c-3.832-1.915-5.385-6.575-3.468-10.407 l26.434-52.865c1.914-3.829,6.572-5.387,10.407-3.468c3.832,1.915,5.385,6.575,3.469,10.407l-26.434,52.865 C248.361,273.105,245.622,274.677,242.776,274.677z" />
+      </g>
+    </g>
+  </symbol>
+  <symbol id="game_icon" viewBox="-5.7 -5.7 68.40 68.40" xml:space="preserve" fill="currentColor">
+    <g id="SVGRepo_bgCarrier" stroke-width="0">
+      <path transform="translate(-5.7, -5.7), scale(2.1375)"
+        d="M16,31.178302362561226C19.50613121105757,31.240757895243352,23.550382409110465,30.177453916363156,25.392572696649612,27.193632254934464C27.15283201935189,24.342515335939602,24.189682764163255,20.830660058965183,24.45097707875629,17.49013527233354C24.666353572975098,14.736648199657134,28.1648280327755,12.165543388872333,26.753774720965467,9.791305270046C25.338710922341125,7.4103191066278065,21.56119797936156,8.774187292606724,18.873421123218733,8.105340347372596C16.63977368753924,7.549502439672091,14.720477415683387,5.8890951220321135,12.444152568002718,6.230389473561761C9.816561974863262,6.62434986479707,7.30781106808925,7.931706074657773,5.737355355414426,10.07485935185104C4.041383340333962,12.389300919870196,3.499804420464995,15.307001599244199,3.6953274414998827,18.169645760846624C3.912215199980991,21.34509012669549,4.696902562151637,24.551629246278168,6.884075246515637,26.863936074783467C9.266031388184796,29.382170456072537,12.534252157943007,31.11656618824609,16,31.178302362561226"
+        fill="#2350FF" strokewidth="0" />
+    </g>
+    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
+    <g id="SVGRepo_iconCarrier">
+      <path style="fill:none;stroke:#38454F;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;"
+        d="M29,27.528v-12.5 c0-2.475,2.025-4.5,4.5-4.5h0c2.475,0,4.5,2.025,4.5,4.5v3.5c0,2.2,1.8,4,4,4h0c2.2,0,4-1.8,4-4v-16" />
+      <path style="fill:#CBD4D8;"
+        d="M45.241,55.471c-1.303,0.022-5.452-0.268-9.314-1.331c-4.514-1.242-10.121-1.237-14.637,0 c-3.892,1.066-7.521,1.354-9.314,1.331C5.142,55.383,0,48.52,0,41.499v0c0-7.684,6.287-13.972,13.972-13.972h29.274 C50.93,27.528,57,33.815,57,41.499v0C57,48.52,52.075,55.355,45.241,55.471z" />
+      <line style="fill:none;stroke:#AFB6BB;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;" x1="27"
+        y1="31.528" x2="31.632" y2="31.528" />
+      <circle style="fill:#43B05C;" cx="36" cy="41.528" r="3" />
+      <circle style="fill:#DD352E;" cx="50" cy="41.528" r="3" />
+      <circle style="fill:#EBBA16;" cx="43" cy="48.528" r="3" />
+      <circle style="fill:#366DB6;" cx="43" cy="34.528" r="3" />
+      <polygon style="fill:#38454F;"
+        points="22,38.528 18,38.528 18,34.528 12,34.528 12,38.528 8,38.528 8,44.528 12,44.528 12,48.528 18,48.528 18,44.528 22,44.528 " />
+    </g>
+  </symbol>
+  <symbol id="art_icon" viewBox="0 0 512 512" xml:space="preserve">
+    <path style="fill:#FF9811;" d="M256,40.421C114.615,40.421,0,136.94,0,256c0,18.594,2.796,36.638,8.052,53.85l29.099-29.099
+	c31.572-31.572,82.757-31.57,114.328,0c31.572,31.572,31.573,82.757,0.001,114.328l-39.288,39.287
+	c40.99,23.483,90.493,37.213,143.807,37.213c141.385,0,256-96.519,256-215.579S397.385,40.421,256,40.421z" />
+    <path style="fill:#FF5023;" d="M0,256c0,18.594,2.796,36.638,8.052,53.85l29.099-29.099c31.572-31.572,82.757-31.57,114.328,0
+	c31.572,31.572,31.573,82.757,0.001,114.328l-39.288,39.287c40.99,23.483,90.493,37.213,143.807,37.213V40.421
+	C114.615,40.421,0,136.94,0,256z" />
+    <circle style="fill:#FFFFFF;" cx="256" cy="384" r="40.421" />
+    <circle style="fill:#6C0014;" cx="128" cy="168.421" r="47.158" />
+    <circle style="fill:#FF5023;" cx="384" cy="168.421" r="47.158" />
+    <circle style="fill:#FFDA44;" cx="424.421" cy="289.684" r="47.158" />
+    <circle style="fill:#D80027;" cx="256" cy="128" r="47.158" />
+  </symbol>
+
   <!---------------- Brand Icons --------------->
 
   <!--Linux-->
@@ -111,6 +171,7 @@
     </path>
   </symbol>
   <!--Kotlin-->
+  <!--Note : This kotlin_icon won't render in chrome browser on android.-->
   <symbol id="kotlin_icon" viewBox="0 0 128 128" fill="currentColor">
     <defs>
       <linearGradient id="a" x1="500.003" x2="-.097" y1="579.106" y2="1079.206"
@@ -121,6 +182,9 @@
       </linearGradient>
     </defs>
     <path fill="url(#a)" d="M112.484 112.484H15.516V15.516h96.968L64 64Zm0 0"></path>
+  </symbol>
+  <symbol id="kotlin_icon2" viewBox="0 0 128 128" fill="currentColor">
+    <path fill="#c711e1" d="M112.484 112.484H15.516V15.516h96.968L64 64Zm0 0"></path>
   </symbol>
   <!--Jetpack-->
   <symbol id="jetpack_icon" viewBox="0 0 128 128" fill="currentColor">
@@ -179,7 +243,8 @@
     <path opacity=".1" d="M86.848 51.289a6.7 6.7 0 0 1 .22.684c-.055-.219-.14-.438-.222-.684z" fill="#000"></path>
     <path d="M86.956 75.186a5.34 5.34 0 0 0 .249-1.646V53.098 73.54a5.34 5.34 0 0 1-.25 1.646z" fill="#d6f0ff"></path>
     <path opacity=".1" d="M86.956 75.186a5.34 5.34 0 0 0 .249-1.646V53.098 73.54a5.34 5.34 0 0 1-.25 1.646z"
-      fill="#000"></path>
+      fill="#000">
+    </path>
   </symbol>
   <!--GCP-->
   <symbol id="gcp_icon" viewBox="0 0 128 128" fill="currentColor">
@@ -193,6 +258,15 @@
     <path fill="#f9bc15"
       d="M40.2 41.9c-14.9.1-28.1 9.3-32.9 22.8-4.8 13.6 0 28.5 11.8 37.3l15.6-14.9c-8.6-3.7-10.6-14.5-4-20.8 6.6-6.4 17.8-4.4 21.7 3.8L68 55.2C61.4 46.9 51.1 42 40.2 42.1z">
     </path>
+  </symbol>
+  <!--Admob-->
+  <symbol id="admob_icon" viewBox="0 0 192 192" fill="currentColor">
+    <path fill="none" d="M0 0h192v192H0z" />
+    <path fill="#FBBC04"
+      d="M92.01 8.26c1.27-.26 6.3-.25 7.5-.26 34.25-.27 81.75 28.87 84.49 84.28v69.18c0 12.45-10.28 22.54-22.77 22.54-9 0-21.23-11.53-21.23-22.5V92.32c-1.27-18.26-16.07-38.81-40.99-40.36-1.54-.1-5.04-.16-7.01.1" />
+    <path fill="#4285F4" d="M183.98 162c0 12.15-9.85 22-22 22S140 174.15 140 162s9.83-22 21.98-22 22 9.85 22 22z" />
+    <path fill="#EA4335"
+      d="M93.2 183.24c12.6 0 22.81-10.02 22.81-22.37 0-12.36-10.46-21.33-23.05-21.33-.08 0-.16.01-.24.01-21.66-1.5-41.92-20.57-40.44-46.71l.03-.42c1.25-20.51 18.75-39.12 40.9-40.4 12.6 0 22.81-9.04 22.81-21.39S105.8 8.25 93.2 8.25c-.51 0-1.02-.03-1.53 0C53.46 9.58 8.46 41.37 8.01 95.4v.33c0 54.83 48.09 87.5 83.93 87.5h1.26z" />
   </symbol>
   <!--Android Studio-->
   <symbol id="android_studio_icon" viewBox="0 0 128 128" fill="currentColor">
