--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     that
                     click, captivate, and connect. You bring the vision. I'll forge the rest.
                 </p>
-                <div class="slider-pane" data-slide-count="9" data-slider-speed="17s" data-slide-width="60px"
+                <div class="slider-pane" data-slide-count="10" data-slider-speed="17s" data-slide-width="60px"
                     aria-label="Continuous slideshow of development skills">
                     <div class="slide-wrapper" role="region">
                         <div id="skills-slideshow-container" class="slide-track" aria-live="off">
@@ -105,7 +105,12 @@
                 <div>
                     <div class="flex-table">
                         <div class="flex-table-cell xl transparent">
-                            <h3>Game Development</h3>
+                            <div class="layout-row">
+                                <svg class="icon-large animate-icon">
+                                    <use href="#game_icon"></use>
+                                </svg>
+                                <h3 class="skills-header">Game Development</h3>
+                            </div>
                             <ul>
                                 <li>Built with LibGDX (v1.13.1) – lightweight, fast, flexible</li>
                                 <li>Maps designed in Tiled, fully customizable and layered</li>
@@ -114,7 +119,12 @@
                             </ul>
                         </div>
                         <div class="flex-table-cell xl transparent">
-                            <h3>App Development</h3>
+                            <div class="layout-row">
+                                <svg class="icon-large animate-icon">
+                                    <use href="#app_icon"></use>
+                                </svg>
+                                <h3 class="skills-header">App Development</h3>
+                            </div>
                             <ul>
                                 <li>Native Android apps using Java & Kotlin</li>
                                 <li>Material 3 design with Jetpack Compose/Views</li>
@@ -125,7 +135,12 @@
                             </ul>
                         </div>
                         <div class="flex-table-cell xl transparent">
-                            <h3>Visual & UI Design</h3>
+                            <div class="layout-row">
+                                <svg class="icon-large animate-icon">
+                                    <use href="#art_icon"></use>
+                                </svg>
+                                <h3 class="skills-header">Visual & UI Design</h3>
+                            </div>
                             <ul>
                                 <li>Pixel-perfect sprite sheets, tilesets, and animations</li>
                                 <li>Minimalist UI for indie games and apps</li>
@@ -137,7 +152,6 @@
                 </div>
             </div>
         </section>
-
 
         <!-- Tools -->
         <section class="container" aria-label="Skills section">
