--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                 <h3>Turn your ideas into unforgettable digital experiences!</h3>
                 <p>From enchanting pixel worlds to smart, seamless tools — every line of code and stroke of art here is
                     crafted to spark curiosity, solve real problems, and feel damn good to use.
-                    <br>At <strong>datsforge</strong>, I don’t just build apps or games — I shape ideas into realities
+                    <br>At datsforge, I don’t just build apps or games — <strong>I shape ideas into realities</strong>
                     that
-                    click, captivate, and connect. You bring the vision. I'll forge the rest.
+                    click, captivate, and connect. <em>You bring the vision. I'll forge the rest.</em>
                 </p>
                 <div class="slider-pane" data-slide-count="10" data-slider-speed="17s" data-slide-width="60px"
                     aria-label="Continuous slideshow of development skills">
@@ -104,7 +104,7 @@
             <div class="layout-column section-divider">
                 <div>
                     <div class="flex-table">
-                        <div class="flex-table-cell xl transparent">
+                        <div class="flex-table-cell xl transparent track-hover">
                             <div class="layout-row">
                                 <svg class="icon-large animate-icon">
                                     <use href="#game_icon"></use>
@@ -118,7 +118,7 @@
                                 <li>Custom logic systems: battle, AI, inventory, UI, and more</li>
                             </ul>
                         </div>
-                        <div class="flex-table-cell xl transparent">
+                        <div class="flex-table-cell xl transparent track-hover">
                             <div class="layout-row">
                                 <svg class="icon-large animate-icon">
                                     <use href="#app_icon"></use>
@@ -134,7 +134,7 @@
                                 <li>Modern libraries: Retrofit, Room, Coil, etc.</li>
                             </ul>
                         </div>
-                        <div class="flex-table-cell xl transparent">
+                        <div class="flex-table-cell xl transparent track-hover">
                             <div class="layout-row">
                                 <svg class="icon-large animate-icon">
                                     <use href="#art_icon"></use>
@@ -158,14 +158,14 @@
             <h2 id="tools-section">Tools & Platforms</h2>
             <div class="label">What I use</div>
             <div class="layout-column section-divider">
-                <div class="card ">
+                <div class="card tools-container track-hover">
                     <div class="card-content">
                         <h3>Languages</h3>
-                        <div id="dev-lang-container" class="layout-row section-divider-thin"></div>
+                        <div id="dev-lang-container" class="layout-row"></div>
                         <h3>Development</h3>
-                        <div id="dev-tools-container" class="layout-row section-divider-thin"></div>
+                        <div id="dev-tools-container" class="layout-row"></div>
                         <h3>Graphics and designs</h3>
-                        <div id="graphics-tools-container" class="layout-row section-divider-thin"></div>
+                        <div id="graphics-tools-container" class="layout-row"></div>
                     </div>
                 </div>
             </div>
@@ -181,8 +181,8 @@
                     creating highly customized RPGs and handcrafted pixel art experiences. And yes—<strong>I craft every
                         pixel myself</strong>. Every sprite, every scene, forged with care and purpose.
                     <br><br>
-                    But I’m not just about <strong>creating fully custom-built games</strong>. I also design and
-                    <strong>build powerful Android apps</strong> using Kotlin and Jetpack
+                    But I’m not just about creating <strong>fully custom-built games</strong>. I also design and
+                    build <strong>powerful Android apps</strong> using Kotlin and Jetpack
                     Compose. From clean architecture and reactive UI to smooth performance and real-world utility—I
                     bring ideas to life in app form. Whether it’s a smart productivity tool or a feature-rich utility, I
                     aim to make apps that are elegant, efficient, and a joy to use.
@@ -201,24 +201,35 @@
             <div class="label">Hire me!</div>
             <div class="layout-column section-divider">
                 <div class="layout-row">
-                    <div class="card contact-details-section">
+                    <div class="card contact-details-section track-hover">
                         <div class="card-content">
-                            <h3>Let’s build something!</h3>
-                            <p>I'd love to hear from you! Fill out the form and I'll make sure to get back to you as
-                                soon
-                                as possible.</p>
-                            <p>Get in touch :</p>
-                            <a href="mailto:contact@datsforge.com" class="button-text-icon"
-                                aria-label="Email contact@datsforge.com">
-                                contact@datsforge.com
-                                <svg class="icon">
-                                    <use href="#mail_icon"></use>
-                                </svg>
-                            </a>
+                            <div class="contact-description">
+                                <h3>Let’s build something!</h3>
+                                <p>I'd love to hear from you! Fill out the form and I'll make sure to get back to you as
+                                    soon
+                                    as possible.</p>
+                            </div>
+                            <div class="contact-links">
+                                <h3>Get in touch :</h3>
+                                <a href="mailto:contact@datsforge.com" class="button-text-icon icon-start"
+                                    aria-label="Email contact@datsforge.com">
+                                    contact@datsforge.com
+                                    <svg class="icon">
+                                        <use href="#mail_icon"></use>
+                                    </svg>
+                                </a>
+                                <a href="https:github.com/datsforge" class="button-text-icon icon-start" target="_blank"
+                                    rel="noopener noreferrer" aria-label="$Visit datsforge on github">
+                                    Visit me on Github
+                                    <svg class="icon">
+                                        <use href="#github_icon"></use>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="contact-form-section">
+                    <div class="contact-form-section track-hover">
                         <form id="contact-form" autocomplete="on" novalidate aria-labelledby="contact-section">
                             <div class="form-group">
                                 <input type="text" id="contact-name" name="name" required autocomplete="name"
@@ -246,7 +257,6 @@
                             </div>
 
                             <div class="form-actions">
-
                                 <div id="form-status" class="form-status" role="status" aria-live="polite"></div>
                                 <button type="submit" class="textbutton filled" id="submit-btn">
                                     <svg class="icon-medium">
@@ -256,9 +266,7 @@
                             </div>
                         </form>
                     </div>
-
                 </div>
-
         </section>
     </main>
 
@@ -298,7 +306,7 @@
         import { setupThemeToggle } from '/assets/js/theme-toggle.js';
         import { setupNavScroll } from '/assets/js/nav-scroll.js';
         import { loadSectionComponents } from '/assets/js/home-section-comp.js';
-
+        import { autoHover } from '/assets/js/hover-tracker.js';
         try {
             await loadComponent({
                 url: '/assets/html/footer/footer-main.html',
@@ -314,6 +322,10 @@
             setupMobileNavToggles();
             setupThemeToggle();
             loadSectionComponents();
+            autoHover({
+                selector: '.track-hover',
+                threshold: 120
+            });
         } catch (err) {
             // TODO Handle error
             // ex. showErrorToUser('Failed to load component');
