feat: added animation on show when certain element is shown for the first time on user scroll

--- a/assets/html/nav/navbar-legal.html
+++ b/assets/html/nav/navbar-legal.html
@@ -17,8 +17,8 @@
             </svg>
         </label>
 
-        <ul class="nav-links">
-            <li class="nav-link"><a href="/assets/html/about.html">About</a></li>
+          <ul class="nav-links">
+            <li class="nav-link"><a href="/index.html">Back to Home</a></li>
         </ul>
     </div>
 </template>
