--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="datsforge: a creative lab where ideas are forged into reality.">
+    <meta name="keywords" content="game development, android apps, pixel art, datsforge, libGDX, Java, Kotlin">
+    <meta name="author" content="dat | datsforge">
     <title>datsforge.com</title>
     <link rel="icon" type="image/png" href="assets/images/datsforge/icon/favicon.png">
     <!-- Theme Styles -->
@@ -262,8 +264,7 @@
                             <!-- Honeypot field for spam bots -->
                             <div class="honeypot-field" aria-hidden="true">
                                 <label for="contact-company">Company (leave this blank)</label>
-                                <input type="text" id="contact-company" name="company" tabindex="-1"
-                                    autocomplete="off">
+                                <input type="text" id="contact-company" name="company" tabindex="-1" autocomplete="off">
                             </div>
                             <div class="form-actions">
                                 <div id="form-status" class="form-status" role="status" aria-live="polite"></div>
