fix: some minor fix of legal pages

--- a/projects/games/shootingmarbles/terms.html
+++ b/projects/games/shootingmarbles/terms.html
@@ -29,7 +29,7 @@
   <main id="main-content" tabindex="-1">
     <div class="container align-center">
       <h1>Terms of Use</h1>
-      <p>Welcome to <strong>Shooting Marbles</strong>, a mobile game developed by <strong>datsforge</strongs>. By
+      <p>Welcome to <strong>Shooting Marbles</strong>, a mobile game developed by <strong>datsforge</strong>. By
           downloading or using the app, you
           agree to be bound by these Terms of Use. If you do not agree with these terms, please do not use the game.
       </p>
